# code

Allocation/: BumpPtrAllocator.cpp  alignAlloc.cpp
AudioMidi/: MidiGenBinary.cpp  convolver.h  fofb_filter.asm  waveshaper.c
Cypher/: feistelCypherThreaded.cpp
DataStructures/: OpenAddressingHashTable.cpp  binary_tree.cpp  myStackQueue.cpp
DataStructures/hybridDS/: small_vector.h  vecMap.cpp  vecSet.cpp
LowLevelStuff/: asmByteSwap.cpp  findNextPowerOf2.cpp  multipleOfN.cpp  sumArraySIMD.cpp
LowLevelStuff/inline_asm/: regs.txt
LowLevelStuff/inline_asm/bitset/: bitset.c
LowLevelStuff/inline_asm/byteswap/: inline_asm.c
LowLevelStuff/intrinsics/: IntrinsicHeaders.txt  access.cpp
MyAlgorithm/: brute_force_xor.c  brute_force_xor_parallel.c  bruteforce_xor_cuda.cu  fast_string_reverse.c  rnd.asm
Threading/: Semaphore.h  barrier.cpp  double_buffer.c  join_threads.cpp  pthread_test.c  spinlock_mutex.cpp
UsingTools/: CMakeLists.txt  profiling.txt
Utils/: cmd_args.c  measure_func_time.cpp
scripts/: add_line.py  findDiff.sh  findDiff2.sh  gdb_add_symbols.py  load-symbols.py  print_entropy.py  replace_line.py
